{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 59,
  "lineage": "477c2c18-cbb5-58a5-d3a7-bfba26993d14",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "udacity_cand_c2_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:215884729453:internet-gateway/igw-024c4e244371c8f2c",
            "id": "igw-024c4e244371c8f2c",
            "owner_id": "215884729453",
            "tags": {
              "environment": "dev"
            },
            "vpc_id": "vpc-03cd3c85583b3106c"
          },
          "dependencies": [
            "aws_vpc.udacity_cand_c2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "udacity_cand_c2_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-024c4e244371c8f2c",
            "id": "r-rtb-0bf1acfc41ee96a591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf1acfc41ee96a59",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.udacity_cand_c2_gw",
            "aws_route_table.udacity_cand_c2_public_rt",
            "aws_vpc.udacity_cand_c2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "udacity_cand_c2_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bf1acfc41ee96a59",
            "owner_id": "215884729453",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024c4e244371c8f2c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "vpc_id": "vpc-03cd3c85583b3106c"
          },
          "dependencies": [
            "aws_vpc.udacity_cand_c2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "udacity_cand_c2_public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044404b193a953733",
            "route_table_id": "rtb-0bf1acfc41ee96a59",
            "subnet_id": "subnet-02fad0250ee1faf03"
          },
          "dependencies": [
            "aws_route_table.udacity_cand_c2_public_rt",
            "aws_subnet.udacity_cand_c2_public_subnet_1",
            "aws_vpc.udacity_cand_c2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "udacity_cand_c2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:215884729453:security-group/sg-0eaf71c24680a2121",
            "description": "SG for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eaf71c24680a2121",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG for EC2 instances",
            "name_prefix": null,
            "owner_id": "215884729453",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cd3c85583b3106c"
          },
          "dependencies": [
            "aws_vpc.udacity_cand_c2_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "udacity_cand_c2_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:215884729453:subnet/subnet-02fad0250ee1faf03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02fad0250ee1faf03",
            "map_public_ip_on_launch": true,
            "owner_id": "215884729453",
            "tags": {
              "environment": "dev"
            },
            "vpc_id": "vpc-03cd3c85583b3106c"
          },
          "dependencies": [
            "aws_vpc.udacity_cand_c2_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "udacity_cand_c2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:215884729453:vpc/vpc-03cd3c85583b3106c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a7c5d467cb239ea3",
            "default_route_table_id": "rtb-049a5758abb026d3a",
            "default_security_group_id": "sg-08b448a629370e10b",
            "dhcp_options_id": "dopt-7d72bc14",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03cd3c85583b3106c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-049a5758abb026d3a",
            "owner_id": "215884729453",
            "tags": {
              "environment": "dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}